--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/systemdemo
+spring.datasource.username= postgres
+spring.datasource.password=postgres
 
+# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
+spring.jpa.show-sql=true
+
+# Because detection is disabled you have to set correct dialect by hand.
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.database=POSTGRESQL
+
+server.port=8081
+-Dserver.port=8081
