--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.0.Final</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -56,6 +66,10 @@
 						<goals>
 							<goal>build-info</goal>
 						</goals>
+						<configuration>
+							<!-- new configuration entry below -->
+							<stripVersion>true</stripVersion>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
